Add or modify files

--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://prime-vision-it.github.io/prime-vision"
+  "homepage": "https://www.primevisiontechnologies.com"
 }
